--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -13,7 +13,8 @@ header {
     position: sticky;
     top: 0;
     background-color: #f1f1f1;
-    z-index: 100;
+    z-index: 110;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
 }
 
 body {
@@ -47,7 +48,10 @@ a {
     flex-direction: column;
     grid-column: 2;
     overflow-x: auto;
+    background-color: #333;
+    height: 100vh;
 }
+
 
 .contagem {
     text-align: center;
@@ -109,7 +113,7 @@ a {
     border-radius: 8px;
 }
 
-h2 {
+#imagem-modal h2 {
     text-align: center;
     color: #555;
     margin-bottom: 20px;
@@ -125,7 +129,7 @@ h2 {
     justify-content: space-between;
     transition: transform 0.2s ease, background-color 0.3s ease;
     position: relative;
-    width: 30%;
+    width: 20%;
     height: fit-content;
     cursor: pointer;
 }
@@ -374,16 +378,14 @@ h2 {
 }
 
 nav {
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    color: black;
-    max-height: 100px;
-    background: gainsboro;
+    margin: 0 auto;
 }
 
 .image {
-    height: 100px;
+    height: 100%;
+    width: 100%;
     transition: 0.3s;
+    object-fit: cover;
 }
 
 .image:hover {
@@ -392,8 +394,9 @@ nav {
 
 .imagens {
     display: grid;
-    grid-template-columns: 1fr 300px;
+    grid-template-columns: 60px 150px 1fr 250px;
     justify-content: center;
+    margin-top: 30px;
 }
 
 #imageContainer {
@@ -405,24 +408,24 @@ nav {
 
 #imagens {
     display: flex;
-    flex-wrap: nowrap;
-    gap: 10px;
-    justify-content: center;
-    overflow-x: auto;
-    max-width: 90%;
     margin: auto;
+    grid-column: 2;
+    flex-direction: column;
+    gap: 10px;
 }
 
 
 #imagem_completa {
     position: relative;
-    max-width: 80%;
+    max-width: 90%;
     height: max-content;
     width: auto;
-    padding: 20px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin: auto;
+    grid-column: 3;
+    overflow: hidden;
 }
 
 @media (min-width: 3400px) {
@@ -433,9 +436,11 @@ nav {
 
 
 .sidebar-direita {
-    border-left: 1px solid black;
     overflow: auto;
     max-height: 80vh;
+    grid-column: 4;
+    margin: 0 auto;
+    flex-direction: column;
 }
 
 .sidebar-direita h3 {
@@ -531,12 +536,13 @@ body::-webkit-scrollbar-track {
 
 
 .comment-card {
-    background-color: #333;
+    background-color: #3d3d3d;
     border-radius: 8px;
     padding: 15px;
     color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
+    font-size: 0.8rem;
 }
 
 .comment-header {
@@ -613,6 +619,11 @@ body::-webkit-scrollbar-track {
 
 .imageWrapper {
     position: relative;
+    padding: 6px;
+    background-color: #5b5b5b;
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
 }
 
 .notification-dot {
@@ -714,16 +725,14 @@ img {
 .nav-select {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+    padding-bottom: 5px;
+    z-index: 1;
+    background-color: #333;
 }
 
 #indiceSelect {
     border: none;
-    background: #676565;
-    color: white;
-    width: 100px;
-    border-radius: 15px;
+    border-radius: 6px;
     padding: 5px 10px;
     text-align: center;
     font-weight: bold;
@@ -738,7 +747,7 @@ h2#dataEnvio {
 }
 
 .obra-card {
-    background: #f2f2f2;
+    background: #bbbbbb;
     padding: 12px;
     margin: 10px;
     border-radius: 8px;
@@ -748,6 +757,7 @@ h2#dataEnvio {
     transition: 0.3s all ease;
     position: relative;
     height: max-content;
+    font-size: 0.8rem;
 }
 
 .obra-card:hover {
@@ -775,7 +785,8 @@ h2#dataEnvio {
     justify-content: center;
 }
 
-.obra-img-preview img {
+.obra-img-preview img,
+.task-image {
     width: 90%;
     height: 200px;
     object-fit: cover;
@@ -789,7 +800,6 @@ h2#dataEnvio {
 
 .obra-info h3 {
     margin: 0;
-    font-size: 18px;
 }
 
 .obra-info p {
@@ -805,16 +815,17 @@ h2#dataEnvio {
 }
 
 .container-main {
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    position: relative;
+    /* importante */
 }
 
 .containerObra {
     width: 90%;
     max-width: 1200px;
     padding: 20px;
-    background-color: #ffffff;
     border-radius: 8px;
     margin: 0 auto;
     display: grid;
@@ -830,7 +841,6 @@ h2#dataEnvio {
 .tarefasObra {
     max-height: 95%;
     overflow-y: auto;
-    border-left: 1px solid;
     padding: 40px 0;
     grid-column: 2;
     grid-row: 1 / -1;
@@ -849,21 +859,15 @@ p#data_aprovacao {
 }
 
 p#status_funcao {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    z-index: 10;
-    font-size: 10px;
-    text-align: center;
-    color: transparent;
+    font-weight: bold;
+    width: max-content;
+    padding: 2px 8px;
+    border-radius: 10px;
 }
 
 p.imagem_nome {
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -872,6 +876,7 @@ p.imagem_nome {
 .filtros label {
     font-weight: bold;
     font-size: 14px;
+    color: white;
 }
 
 
@@ -1061,38 +1066,6 @@ p.imagem_nome {
     color: white;
 }
 
-
-.drawer {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 400px;
-    height: 100vh;
-    background: #fff;
-    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
-    z-index: 9999;
-    padding: 20px;
-    overflow-y: auto;
-}
-
-.drawer-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid #eee;
-}
-
-.drawer.visible {
-    transform: translateX(0%);
-}
-
-.drawer.hidden {
-    display: none;
-}
-
 .task-item {
     padding: 12px;
     margin-bottom: 10px;
@@ -1103,4 +1076,220 @@ p.imagem_nome {
 
 .task-item:hover {
     background-color: #eee;
+}
+
+.image-wrapper {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.image-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.image-wrapper:hover img {
+    transform: scale(1.07);
+}
+
+nav.breadcrumb-nav {
+    position: absolute;
+    top: 0;
+    left: 5px;
+    font-size: 14px;
+}
+
+nav.breadcrumb-nav a {
+    text-decoration: none;
+    color: #333;
+    position: relative;
+    margin-right: 10px;
+}
+
+.tarefasObra .header nav.breadcrumb-nav a {
+    color: white;
+}
+
+.breadcrumb-nav a::after {
+    content: '>';
+    margin-left: 10px;
+    color: #999;
+}
+
+.breadcrumb-nav a:last-child::after {
+    content: '';
+    /* Remove o > do último link */
+}
+
+.tab-img {
+    width: 100%;
+    height: 60px;
+    border-radius: 6px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.wrapper-sidebar {
+    display: grid;
+    margin-left: 10px;
+    width: 100%;
+}
+
+#sidebarTabulator {
+    transition: width 0.3s ease;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 100;
+}
+
+
+.sidebar-min {
+    width: 55px !important;
+}
+
+.sidebar-expanded {
+    width: 350px !important;
+}
+
+.group-header {
+    cursor: pointer;
+    background: #f1f1f1;
+    border-bottom: 1px solid #ccc;
+    font-size: 0.9rem;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.funcao-label {
+    display: inline;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.funcao-completa {
+    display: none;
+    margin-left: 10px;
+}
+
+.sidebar-expanded .funcao-label {
+    display: none;
+}
+
+.sidebar-expanded .funcao-completa {
+    display: inline;
+}
+
+.tarefas-lista {
+    padding: 10px;
+    background: #f9f9f9;
+}
+
+.tarefa-item {
+    cursor: pointer;
+    margin-bottom: 10px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    box-shadow: 0 2px 4px #d9d9d9;
+}
+
+.tarefa-item img.tab-img {
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.tarefa-item span {
+    font-size: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    padding: 0 5px;
+}
+
+.submit-btn {
+    background-color: #00aaff;
+    color: white;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.modal-decision {
+    position: fixed;
+    right: 20px;
+    z-index: 9999;
+    background-color: #2c2c2c;
+    color: white;
+    padding: 20px;
+    width: 200px;
+    border-radius: 8px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    font-size: 0.8rem;
+}
+
+
+.modal-content-decision label {
+    display: block;
+}
+
+.modal-content-decision input[type="radio"] {
+    margin-right: 8px;
+}
+
+.close {
+    position: absolute;
+    right: 14px;
+    top: 8px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.cancel-btn,
+.confirm-btn {
+    padding: 6px 14px;
+    border-radius: 20px;
+    border: 1px solid white;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+}
+
+.confirm-btn {
+    border-color: #00aaff;
+}
+
+
+#submit_decision {
+    display: flex;
+    background-color: #ab1c1c;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 6px;
+    border-radius: 6px;
+    color: white;
+    box-shadow: 0 4px 6px #370000;
+    height: max-content;
+    margin: 0 auto;
+}
+
+.buttons button {
+    height: 30px;
+    width: 30px;
+    background-color: white;
+    text-align: center;
+    border-radius: 50%;
 }
