--- a/Revisao/style2.css
+++ b/Revisao/style2.css
@@ -501,12 +501,14 @@ nav {
     padding: 10px;
 }
 
-.comentarios::-webkit-scrollbar,
+#sidebarTabulator::-webkit-scrollbar,
+.tarefasObra::-webkit-scrollbar,
 .tarefasObra::-webkit-scrollbar,
 .containerObra::-webkit-scrollbar {
     width: 5px;
 }
 
+#sidebarTabulator::-webkit-scrollbar-thumb,
 .comentarios::-webkit-scrollbar-thumb,
 .tarefasObra::-webkit-scrollbar-thumb,
 .containerObra::-webkit-scrollbar-thumb {
@@ -514,6 +516,7 @@ nav {
     border-radius: 10px;
 }
 
+#sidebarTabulator::-webkit-scrollbar-track,
 .comentarios::-webkit-scrollbar-track,
 .tarefasObra::-webkit-scrollbar-track,
 .containerObra::-webkit-scrollbar-track {
@@ -1146,6 +1149,8 @@ nav.breadcrumb-nav a {
     flex-direction: column;
     gap: 10px;
     z-index: 100;
+    max-height: 50vh;
+    overflow-y: auto;
 }
 
 
