--- a/Revisao/style2.css
+++ b/Revisao/style2.css
@@ -1149,8 +1149,6 @@ nav.breadcrumb-nav a {
     flex-direction: column;
     gap: 10px;
     z-index: 100;
-    max-height: 50vh;
-    overflow-y: auto;
 }
 
 
@@ -1289,6 +1287,10 @@ nav.breadcrumb-nav a {
     box-shadow: 0 4px 6px #370000;
     height: max-content;
     margin: 0 auto;
+}
+
+.buttons {
+    padding-right: 2px;
 }
 
 .buttons button {
