--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1222,14 +1222,12 @@ th .resize-handle {
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.2s ease, background-color 0.2s ease;
-    width: 45px;
-    height: 45px;
     text-align: center;
+    padding: 4px 6px;
 }
 
 .buttons-nav button:hover {
     background-color: #0056b3;
-    transform: scale(1.1);
 }
 
 i.fa-circle-info,
