Refatoração do processo de renderização e atualizações da interface do usuário
- Configuração do espaço de trabalho atualizada para refletir a nova estrutura do arquivo de renderização.
- Novos arquivos HTML e Markdown adicionados para a documentação do processo de renderização.
- Index.php aprimorado para a seção de pós-produção com novos estilos e animações.
- JavaScript aprimorado para lidar com status e filtros de renderização.
- Modalidade de renderização atualizada para incluir informações detalhadas sobre o trabalho e tratamento de erros.
- Funcionalidade adicionada para aprovar e rejeitar renderizações com feedback do usuário.
- Estilos CSS refinados para melhor layout e responsividade na seção de renderização.
- Lógica de atualização modificada nos scripts PHP para acomodar o novo histórico de aprovação.

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -861,7 +861,8 @@ p#data_aprovacao {
     font-weight: bold;
 }
 
-p#status_funcao, #status_tarefa {
+p#status_funcao,
+#status_tarefa {
     font-weight: bold;
     width: max-content;
     padding: 2px 8px;
@@ -1140,6 +1141,7 @@ nav.breadcrumb-nav a {
     display: grid;
     margin-left: 10px;
     width: 100%;
+    max-height: 50vh;
 }
 
 #sidebarTabulator {
@@ -1149,6 +1151,8 @@ nav.breadcrumb-nav a {
     flex-direction: column;
     gap: 10px;
     z-index: 100;
+    max-height: 50vh;
+    overflow: auto;
 }
 
 
